--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,17 +1,17 @@
 ---
-service_env: "dev"
-service_name: "artifactory"
-service_state: "present"
+artifactory_env: "dev"
+artifactory_name: "artifactory"
+artifactory_state: "present"
 
-hostport_http: "80"
+artifactory_port: "80"
 
 # all postgres and artifactory data will be kept here
-hostpath_data: "/srv/artifactory/data"
+artifactory_datapath: "/srv/artifactory/data"
 
-postgres_image: "docker.bintray.io/postgres"
-postgres_image_tag: "9.5.2"
-postgres_user: "artifactory"
-postgres_password: "password"
+artifactory_postgres_image: "docker.bintray.io/postgres"
+artifactory_postgres_image_tag: "9.5.2"
+artifactory_postgres_user: "artifactory"
+artifactory_postgres_password: "password"
 
 artifactory_image: "docker.bintray.io/jfrog/artifactory-pro"
 artifactory_image_tag: "5.4.3"
