ugh travis environments

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python: "2.7"
-
+dist: trusty
 sudo: required
 
 branches:
@@ -19,7 +19,7 @@ install:
   # version checks
   - ansible --version
 
-  # Create ansible.cfg with correct roles_path
+  # create ansible.cfg with correct roles_path
   - printf '[defaults]\nroles_path=../' > ansible.cfg
 
 script:
