--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,7 +10,7 @@ artifactory_pypi_docker_compose_version: '1.15.0'
 artifactory_port: "80"
 
 # all postgres and artifactory data will be kept here
-artifactory_datapath: "/srv/artifactory/data"
+artifactory_datapath: "/srv/artifactory"
 
 artifactory_postgres_image: "docker.bintray.io/postgres"
 artifactory_postgres_image_tag: "9.5.2"
@@ -20,3 +20,48 @@ artifactory_postgres_password: "password"
 artifactory_image: "docker.bintray.io/jfrog/artifactory-pro"
 artifactory_image_tag: "5.4.3"
 artifactory_javaopts: "-Xmx4g"
+
+artifactory_url: "{{ artifactory_name }}.example.com"
+artifactory_proxy_image: "nginx"
+artifactory_proxy_image_tag: "alpine"
+artifactory_proxy_config: |
+  ### defaults to NO SSL termination. expectation is that is handled separately.
+  ## add ssl entries when https has been set in config
+  # ssl_certificate      /moo/cert.crt;
+  # ssl_certificate_key  /moo/cert.key;
+  # ssl_session_cache shared:SSL:1m;
+  # ssl_prefer_server_ciphers   on;
+
+  ## server configuration
+  server {
+      listen 80;
+      server_name ~(?<repo>.+)\.{{ artifactory_url }} {{ artifactory_url }};
+
+      if ($http_x_forwarded_proto = '') {
+          set $http_x_forwarded_proto  $scheme;
+      }
+      ## Application specific logs
+      access_log /var/log/nginx/{{ artifactory_url }}-access.log combined;
+      error_log /var/log/nginx/{{ artifactory_url }}-error.log;
+      rewrite ^/$ /artifactory/webapp/ redirect;
+      rewrite ^/artifactory/?(/webapp)?$ /artifactory/webapp/ redirect;
+      rewrite ^/(v1|v2)/(.*) /artifactory/api/docker/$repo/$1/$2;
+      chunked_transfer_encoding on;
+      client_max_body_size 0;
+      location /artifactory/ {
+      proxy_read_timeout  900;
+      proxy_pass_header   Server;
+      proxy_cookie_path   ~*^/.* /;
+
+      # the following URLs refer to the Docker link and native port
+      if ( $request_uri ~ ^/artifactory/(.*)$ ) {
+          proxy_pass          http://artifactory:8081/artifactory/$1;
+      }
+      proxy_pass          http://artifactory:8081/artifactory/;
+      proxy_set_header    X-Artifactory-Override-Base-Url $http_x_forwarded_proto://$host:$server_port/artifactory;
+      proxy_set_header    X-Forwarded-Port  $server_port;
+      proxy_set_header    X-Forwarded-Proto $http_x_forwarded_proto;
+      proxy_set_header    Host              $http_host;
+      proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
+      }
+  }
