--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,8 +38,12 @@ artifactory_proxy_config: |
       server_name ~(?<repo>.+)\.{{ artifactory_url }} {{ artifactory_url }};
 
       if ($http_x_forwarded_proto = '') {
-          set $http_x_forwarded_proto  $scheme;
+        set $http_x_forwarded_proto  $scheme;
       }
+      if ($http_x_forwarded_proto != 'https') {
+        rewrite ^ https://$host$request_uri? permanent;
+      }
+
       ## Application specific logs
       access_log /var/log/nginx/{{ artifactory_url }}-access.log combined;
       error_log /var/log/nginx/{{ artifactory_url }}-error.log;
@@ -58,9 +62,9 @@ artifactory_proxy_config: |
           proxy_pass          http://artifactory:8081/artifactory/$1;
       }
       proxy_pass          http://artifactory:8081/artifactory/;
-      proxy_set_header    X-Artifactory-Override-Base-Url $http_x_forwarded_proto://$host:$server_port/artifactory;
-      proxy_set_header    X-Forwarded-Port  $server_port;
-      proxy_set_header    X-Forwarded-Proto $http_x_forwarded_proto;
+      proxy_set_header    X-Artifactory-Override-Base-Url https://$host/artifactory;
+      proxy_set_header    X-Forwarded-Port  443;
+      proxy_set_header    X-Forwarded-Proto https;
       proxy_set_header    Host              $http_host;
       proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
       }
