--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,12 +13,12 @@ artifactory_port: "80"
 artifactory_datapath: "/srv/artifactory"
 
 artifactory_postgres_image: "docker.bintray.io/postgres"
-artifactory_postgres_image_tag: "9.5.2"
+artifactory_postgres_image_tag: "latest"
 artifactory_postgres_user: "artifactory"
 artifactory_postgres_password: "password"
 
 artifactory_image: "docker.bintray.io/jfrog/artifactory-pro"
-artifactory_image_tag: "5.4.3"
+artifactory_image_tag: "latest"
 artifactory_javaopts: "-Xmx4g"
 
 artifactory_url: "{{ artifactory_name }}.example.com"
